# mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
airlines/: dataset.py  model.py  preprocessor.py  utils.py
configs/: config.yaml  config_extra.yaml
data/: .gitignore  airlines_data.csv.dvc  airlines_model.dvc  airlines_predictions.csv.dvc
data/pics/: .gitignore
model/: .gitignore  airlines_model.dvc  airlines_preprocessor.joblib.dvc
outputs/2023-12-25/22-37-50/.hydra/: hydra.yaml
outputs/2023-12-25/22-38-01/.hydra/: hydra.yaml
outputs/2023-12-25/22-39-38/.hydra/: hydra.yaml
outputs/2023-12-25/22-45-39/.hydra/: hydra.yaml
outputs/2023-12-25/22-46-39/.hydra/: hydra.yaml
outputs/2023-12-25/22-47-01/.hydra/: config.yaml  hydra.yaml
outputs/2023-12-25/22-47-26/.hydra/: hydra.yaml
outputs/2023-12-25/22-47-43/.hydra/: hydra.yaml
outputs/2023-12-25/22-48-55/.hydra/: hydra.yaml
