[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "MLOps course project"
authors = ["timofeykozachkin <timofeykozachkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
torch = "^2.1.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
