[tool.poetry]
name = "airlines"
version = "0.1.0"
description = "MLOps course project"
authors = ["timofei kozachkin"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
